--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/QA/Index.cshtml
@@ -262,7 +262,7 @@
         $(document).ready(function () {
             $('#tblQA').DataTable({
                 ajax: {
-                    url: urlApi + "/api/QA/getAllQA",
+                    url: urlApi + "api/QA/getAllQA/" + eventId,
                     dataSrc: ""
                 },
                 columns: [
