chỉnh lại tiếng việt trang Activity, Timeline, Interaction, Livestream

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -409,15 +409,15 @@
                 <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
             </ul>
         </li>*@
-                    <li><a href="@Url.Action("Index","Home")"><i class="fa fa-home" aria-hidden="true"></i> <span>Home</span></a></li>
-                    <li><a href="@Url.Action("Index","Timeline")"><i class="fa fa-clock-o" aria-hidden="true"></i> <span>Timeline</span></a></li>
-                    <li><a><i class="fa fa-question-circle"></i> <span>Q&A</span></a></li>
+                    <li><a href="@Url.Action("Index","Home")"><i class="fa fa-home" aria-hidden="true"></i> <span>Trang Chủ</span></a></li>
+                    <li><a href="@Url.Action("Index","Timeline")"><i class="fa fa-clock-o" aria-hidden="true"></i> <span>Dòng Thời Gian</span></a></li>
+                    <li><a><i class="fa fa-question-circle"></i> <span>Hỏi Đáp</span></a></li>
                     <li><a href="@Url.Action("Index","Voting")"><i class="fa fa-check-circle-o"></i> <span>Voting</span></a></li>
-                    <li><a href="@Url.Action("Index","Interaction")"><i class="fa fa-check-circle-o"></i> <span>Interaction</span></a></li>
-                    <li><a href="@Url.Action("Index","Activity")"><i class="fa fa-rocket" aria-hidden="true"></i><span>Activity</span></a></li>
-                    <li><a href="@Url.Action("Index","Session")"><i class="fa fa-calendar" aria-hidden="true"></i><span>Session</span></a></li>                  
-                    <li><a href="@Url.Action("Index","Speaker")"><i class="fa fa-users"></i> <span>Speaker</span></a></li>
-                    <li><a href="@Url.Action("Index","Sponsor")"><i class="fa fa-users"></i> <span>Sponsor</span></a></li>
+                    <li><a href="@Url.Action("Index","Interaction")"><i class="fa fa-check-circle-o"></i> <span>Tương Tác</span></a></li>
+                    <li><a href="@Url.Action("Index","Activity")"><i class="fa fa-rocket" aria-hidden="true"></i><span>Hoạt Động</span></a></li>
+                    <li><a href="@Url.Action("Index","Session")"><i class="fa fa-calendar" aria-hidden="true"></i><span>Phiên Làm Việc</span></a></li>                  
+                    <li><a href="@Url.Action("Index","Speaker")"><i class="fa fa-users"></i> <span>Diễn Giả</span></a></li>
+                    <li><a href="@Url.Action("Index","Sponsor")"><i class="fa fa-users"></i> <span>Tài Trợ</span></a></li>
                     <li><a><i class="fa fa-sign-out"></i> <span>Sign out</span></a></li>
                     @*<li class="treeview">
             <a href="#">
