--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Livestream/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Livestream/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Quản Lý Phát Trực Tuyến";
 }
 
 <div class="container">
@@ -8,11 +8,11 @@
         <div class="box-header">
             <div class="row">
                 <div class="col-sm-10">
-                    <h2>Manage Livestream</h2>
+                    <h2>Quản Lý Phát Trực Tuyến</h2>
                 </div>
                 <div class="col-sm-2">
                     <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#addLivestreamModal" style="margin-top:20px">
-                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Add Livestream
+                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
                     </button>
                 </div>
             </div>
@@ -23,43 +23,43 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Add Livestream</h4>
+                            <h4 class="modal-title">Thêm Phát Trực Tuyến</h4>
                         </div>
                         <div class="modal-body">
                             <div class="form-group">
-                                <label class="col-sm-3 form-control-label">Name:</label>
+                                <label class="col-sm-3 form-control-label">Tên:</label>
                                 <div class="col-sm-9 input-group">
                                     <div class="input-group-addon">
                                         <i class="fa fa-briefcase" aria-hidden="true"></i>
                                     </div>
-                                    <input type="text" class="form-control" placeholder="Enter Livestream's name">
+                                    <input type="text" class="form-control" placeholder="Nhập tên luồng phát trực tuyến">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 form-control-label">Select Session:</label>
+                                <label class="col-sm-3 form-control-label">Lựa chon phiên:</label>
                                 <div class="col-sm-9 input-group">
                                     <div class="input-group-addon">
                                         <i class="fa fa-calendar" aria-hidden="true"></i>
                                     </div>
                                     <select class="form-control">
-                                        <option>Sesion 1</option>
-                                        <option>Sesion 2</option>
+                                        <option>Phiên 1</option>
+                                        <option>Phiên 2</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 form-control-label">Link Stream:</label>
+                                <label class="col-sm-3 form-control-label">Đường dẫn:</label>
                                 <div class="col-sm-9 input-group">
                                     <div class="input-group-addon">
                                         <i class="fa fa-link" aria-hidden="true"></i>
                                     </div>
-                                    <input type="text" class="form-control" placeholder="Input url">
+                                    <input type="text" class="form-control" placeholder="Nhập đường dẫn">
                                 </div>
 
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-primary">Add</button>
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-primary">Thêm</button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
                             </div>
                         </div>
 
