+ Thêm nút tạo mới và trang tạo mới event

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/admin.css
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/admin.css
@@ -107,3 +107,11 @@
     float:right;
     margin-bottom:20px;
 }
+
+.box-add-event {
+    margin-top:20px;
+}
+
+/*.btn-add-event {
+    margin-right:10px;
+}*/
